# whir

./: Cargo.toml
benches/: expand_from_coeff.rs  metal_buffer.rs  whir.rs  zook_vs_whir.disabled  zook_vs_whir.rs
crates/whir-field/: Cargo.toml
crates/whir-field/src/: lib.rs
crates/whir-field/src/goldilocks/: accumulator.rs  mod.rs
docs/: buffer-prove-design.md
proptest-regressions/protocols/: irs_commit.txt
proptest-regressions/protocols/params/: basecase.txt  code_switch.txt  derive.txt  irs_commit.txt  sumcheck.txt
scripts/: phase_benchmark_cpu_gpu.sh  plot_phase_benchmark.py
src/: bits.rs  lib.rs  parameters.rs
src/algebra/: buffer.rs  fields.rs  metal_buffer.rs  mod.rs
src/algebra/ntt/: cooley_tukey.rs  mod.rs
src/buffer/: cpu.rs  mod.rs
src/buffer/cpu/: buffer.rs  mod.rs  read_write.rs  traits.rs
src/buffer/metal/: buffer.rs  kernels.rs  mod.rs  profile.rs  rs.rs  runtime.rs  sha2.rs
src/hash/: metal_profile.rs  metal_sha2_engine.rs  mod.rs
src/protocols/: basecase.rs  challenge_indices.rs  code_switch.rs  geometric_challenge.rs  irs_commit.rs  mask_proximity.rs  matrix_commit.rs  merkle_tree.rs  mod.rs  proof_of_work.rs  sumcheck.rs
src/protocols/params/: adaptive.rs  basecase.rs  bounds.rs  branch.rs  build_round.rs  code_switch.rs  derive.rs  error.rs  irs_commit.rs  layout.rs  mask_proximity.rs  mod.rs  protocol_config.rs  regime.rs  solved.rs  spec.rs  sumcheck.rs  test_utils.rs
src/protocols/whir/: config.rs  mod.rs  prover.rs  verifier.rs
src/protocols/whir_zk/: committer.rs  mod.rs  prover.rs  verifier.rs
(+4 files in other folders)
