[package]
name = "whir-field"
version = "0.1.0"
edition = "2021"
description = "WHIR-owned loose-representation Goldilocks field. Phase 1: scalar, proven in isolation."
license = "MIT OR Apache-2.0"

# Standalone: this crate is its OWN workspace root, deliberately NOT a member of the
# WHIR workspace. Phase 1 is built and fuzzed in isolation; WHIR is untouched.
# (Dependencies are added per subphase, as needed — 1A needs none at runtime.)
[workspace]

[dev-dependencies]
proptest = "1"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Goldilocks arithmetic is full of intentional wrapping/casts and hot inlines.
cast_possible_truncation = "allow"
cast_lossless = "allow"            # branchless carry folds need `bool as u64` in const fn
unreadable_literal = "allow"
must_use_candidate = "allow"
inline_always = "allow"
