[package]
name = "whir-field"
version = "0.1.0"
edition = "2021"
description = "WHIR-owned loose-representation Goldilocks field. Phase 1: scalar, proven in isolation."
license = "MIT OR Apache-2.0"

[workspace]

[dev-dependencies]
proptest = "1"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_lossless = "allow"
unreadable_literal = "allow"
must_use_candidate = "allow"
inline_always = "allow"
